# hello_atomvm_nif

./: .clang-format  CMakeLists.txt  Kconfig  README.md
examples/elixir/: mix.exs
examples/elixir/lib/: sample_app.ex
examples/elixir/lib/sample_app/: hello.ex
examples/hello_nif_elixir/: mix.exs
examples/hello_nif_elixir/lib/: hello_nif.ex  sample_app.ex
nifs/: hello_nif.c  sample_app_hello.c
nifs/include/: hello_nif.h  sample_app_hello.h
scripts/: atomvm-esp32.sh
